# S4ED

./: CMakeLists.txt  README.md
practica10/src/: Hash.h  Main.c  Movie.c  Movie.h  main.c
practica10/src/app/: components.c  components.h
practica10/src/core/: hash.c  hash.h  movie.c  movie.h
practica10/src/util/: const.h
practica8/: main.c
practica8/app/: components.c  components.h
practica8/core/: file.c  functions.h  mqueue.c  queue.c  structs.h
practica9/: CMakeLists.txt  Makefile  main.c
practica9/app/: components.c  components.h
practica9/core/file/: file.c  file.h
practica9/core/heap/: heap.h  priority.c
practica9/core/queue/: queue.c  queue.h
practica9/core/tree/: tree.h
practica9/src/: main.c
practica9/src/app/: components.c  components.h
practica9/src/core/file/: file.c  file.h
practica9/src/core/heap/: heap.c  heap.h  priority.c
practica9/src/core/printer/: print_queue.c
practica9/src/core/queue/: queue.c  queue.h  queue_data.c
practica9/src/core/tree/: tree.c  tree.h  tree_data.c
practica9/util/: const.h
practica9n/src/: functions.h  heap.c  main.c  structs.h
practica9venti/src/: main.c
practica9venti/src/app/: components.c
practica9venti/src/core/file/: file.c  file.h
practica9venti/src/core/heap/: heap.h
practica9venti/src/core/printer/: print_queue.c  print_queue.h
practica9venti/src/core/queue/: queue.c  queue.h
practica9venti/src/core/tree/: tree.c  tree.h  tree_data.c
practica9venti/src/imp/: heap.c  queue.c  structs.h
